--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 blinker==1.7.0
 click==8.1.7
 Flask==3.0.2
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -10,3 +12,4 @@ packaging==23.2
 SQLAlchemy==2.0.25
 typing_extensions==4.9.0
 Werkzeug==3.0.1
+WTForms==3.1.2
