--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
+alembic==1.13.1
 blinker==1.7.0
 click==8.1.7
 Flask==3.0.2
 Flask-Login==0.6.3
+Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
+gunicorn==20.0.4
 itsdangerous==2.1.2
 Jinja2==3.1.3
+Mako==1.3.2
 MarkupSafe==2.1.5
 packaging==23.2
 SQLAlchemy==2.0.25
 typing_extensions==4.9.0
 Werkzeug==3.0.1
 WTForms==3.1.2
-gunicorn==20.0.4
